# nvidia-lb_sd

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  docker-mock-guide.md  mock-guide.md  release-version.txt  tree.txt
load-balancer/: Dockerfile  pyproject.toml  requirements.txt  tree.txt
load-balancer/app/: main.py
load-balancer/app/api/: routes.py
load-balancer/app/core/: config.py  logging.py
load-balancer/app/gateway/: edge.py  internal.py
load-balancer/app/metrics/: prometheus.py
load-balancer/app/models/: schemas.py
load-balancer/app/services/: discovery_client.py  geo.py  health.py  metrics.py  picker.py  proxy.py
load-balancer/app/services/algorithms/: base.py  least_conn.py  round_robin.py  weighted_rr.py
load-balancer/tests/: test_lb_connectivity.py
service-discovery/: Dockerfile  requirements.txt  requirments.txt  tree.txt
service-discovery/app/: __init__.py  main.py
service-discovery/app/api/: __init__.py  routes.py
service-discovery/app/core/: __init__.py  config.py  logging.py
service-discovery/app/metrics/: __init__.py  prometheus.py
service-discovery/app/models/: __init__.py  schemas.py
service-discovery/app/services/: __init__.py  health.py  registry.py
